# pdf-viewer

./: .gitignore  A4_quotation1.csv  A5_Form1_Novat.csv  A5_Form2_Vat.csv  BUILDING.md  PopupTreeview.py  README.md  Read_CSV.py  build-all.py  build.bat  build.py  build.sh  main.py  main2.py  old_main.py  pyproject.toml  serm_form1.csv
.github/workflows/: build-multiplatform.yml
