[project]
name = "pdf-viewer"
version = "0.1.0"
description = "Lightweight desktop PDF viewer with coordinate tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]

[tool.pyinstaller]
# PyInstaller configuration
name = "PDF-Coordinate-Viewer"
console = false
onefile = true
windowed = true
